Se cambio el estilo y se hizo un poco responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                 <li><a href="#sobre-mi">Sobre mi</a></li>
                                 <li><a href="#portafolio-">Portafolio</a></li>
                                 <li><a href="">Contacto</a></li>
-                                <li><a href="">menu</a></li>
+                                <li><button>menu</button></li>
                             </ul>
                         </div>
                     </nav>
@@ -32,31 +32,47 @@
             <main>
                     <section id="inicio-">
                         <div class="inicio">
-                        <div class="inicio-img">
-                            <img src="media/icon.png" alt="">
-                        </div>
+                            <div class="box-2">
+                                <div class="inicio-img">
+                                    <article>
+                                        <img src="media/icon.png" class="cover" alt="esperando el render">
+                                    </article>
+                                </div>
+                            </div>
+                            <div class="box-1">
                             <div class="inicio-content">
+                             <div class="style-content">
                                 <h1><strong><span class="letra-1">Esperando</span> el <span class="letra-2">render</span></strong></h1>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint voluptas non vel, laboriosam repudiandae assumenda aut nisi fuga cumque quam ipsam vero quo omnis ducimus, impedit accusamus ratione exercitationem nostrum!</p>
                                 <button class="button">Descargar cv</button>
                             </div>
-                        
+                            </div>
+                            </div>
                         </div>
                     </section>
                     <section id="sobre-mi">
                         <div class="sobremi">
-                            <div class="sobremi-content">
-                                <h2><span class="letra-1">sob</span>re <span class="letra-2">mi</span></h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum suscipit quae minima quas, dignissimos deserunt perspiciatis earum. Iusto necessitatibus veniam cumque odio deleniti debitis aliquid unde, magnam excepturi ratione tenetur?</p>
-                                <div class="sobremi-icons">
-                                    <img src="media/about_me.png" class="icon" alt="">
-                                    <img src="media/about_me.png" class="icon" alt="">
-                                    <img src="media/about_me.png" class="icon" alt="">
-                                </div>
-                            </div>
+                            <div class="box-2">
                             <div class="sobremi-img">
-                                <img src="media/about_me.png" alt="">
+                                <article>
+                                <img src="media/1.png" class="cover" alt="sobre mi">
+                                </article>
                             </div>
+                            </div>
+                            <div class="box-1">
+                                <div class="sobremi-content">
+                                    <div class="style-content">
+                                    <h2><span class="letra-1">sob</span>re <span class="letra-2">mi</span></h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum suscipit quae minima quas, dignissimos deserunt perspiciatis earum. Iusto necessitatibus veniam cumque odio deleniti debitis aliquid unde, magnam excepturi ratione tenetur?</p>
+                                    <div class="sobremi-icons">
+                                        <img src="media/ae.png" class="icon" alt="">
+                                        <img src="media/ai.png" class="icon" alt="">
+                                        <img src="media/pr.png" class="icon" alt="">
+                                        <img src="media/ps.png" class="icon" alt="">
+                                    </div>
+                                    </div>
+                                    </div>
+                                </div>
                         </div>
                     </section>
                     <section id="portafolio-">
@@ -67,26 +83,32 @@
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nemo ipsam saepe! Reiciendis, cupiditate dolore! Assumenda illum dignissimos, voluptate iure, natus soluta magnam asperiores nostrum eveniet error provident sint impedit!</p>
                                 </div>
                                 <div class="portafolio-article">
+                                   <div class="fila-1">
                                     <article>
-                                        <img src="media/about_me.png" alt="">
-                                        <h3>asdasdasdas</h3>
+                                        <img src="media/about_me.png" class="cover" alt="">
+                                        <h3>Proyecto 1</h3>
                                     </article>
                                     <article>
-                                        <img src="media/about_me.png" alt="">
-                                        <h3>asdasdasdas</h3>
+                                        <img src="media/about_me.png" class="cover" alt="">
+                                        <h3>Proyecto 2</h3>
+                                    </article>
+                                    </div>
+                                    <div class="fila-2">
+                                    <article>
+                                        <img src="media/about_me.png" class="cover" alt="">
+                                        <h3>Proyecto 3</h3>
                                     </article>
                                     <article>
-                                        <img src="media/about_me.png" alt="">
-                                        <h3>asdasdasdas</h3>
+                                        <img src="media/about_me.png" class="cover" alt="">
+                                        <h3>Proyecto 4</h3>
                                     </article>
+                                    </div>
+                                    <div class="fila-3">
                                     <article>
-                                        <img src="media/about_me.png" alt="">
-                                        <h3>asdasdasdas</h3>
+                                        <img src="media/about_me.png" class="cover" alt="">
+                                        <h3>Proyecto 5</h3>
                                     </article>
-                                    <article>
-                                        <img src="media/about_me.png" alt="">
-                                        <h3>asdasdasdas</h3>
-                                    </article>
+                                    </div>
                                 </div>
                             </div>
                         </div>
